# cfddns

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.build  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  release.yml
src/: cloudflare.rs  main.rs
